# fund

./: .gitignore  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt  settings.py  supervisor.conf  uwsgi.ini  uwsgi_new.ini
agent/: deepseek.py  demo.py  langchain_demo.py  langchain_memory.py  pyproject.toml  test.py  tmp.py
agentv2/: AI旅游助手.py  langchain_memory.py  pyproject.toml  tmp.py
agentv_langgraph/: 01_short_term.py  02_long_term.py  03 tavily.py  04_react_agent_map_mcp_server.py  05_01_mcp_server.py  05_02_mcp_server_config.json  05_03_mcp_server_test.py  05_04_chart.py  05_mcp_server.py  05_mcp_server_test.py  06_name.py  07_prompt_template.py  08_multi_prompt_template.py  09_load_prompt.json  09_load_prompt.py  09_load_prompt.yaml  09_prompt_with_output_parser.json  10_示例选择器.py  11_output_parsers.py  12_loader.csv  12_loader.md  12_loader.xlsx  12_rag.py  12_text.txt  13_长上下文精度处理_lost_in_the_middle.py  14_文本向量化实现方式.py  15_chatdoc.py  15_房屋租赁合同.docx  pyproject.toml  tmp.py
agentv_langgraph/rag/: rag_1.py
cademy/: admin.py  apps.py  models.py
cademy/migrations/: 0001_initial.py  0002_alter_mathcademy_options.py  0003_auto_20230203_1747.py  0004_mathcademy_remark.py  0005_toolscademy.py  0006_auto_20230207_1038.py  0007_cademy.py  0008_auto_20230301_1237.py  0009_auto_20230317_1636.py  0010_auto_20230324_1417.py  0011_auto_20230414_1644.py  0012_alter_cademy_category.py
douyin/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
douyin/chrome/: douyin.js  http.js  manifest.json
douyin/migrations/: 0001_initial.py  0002_auto_20211119_0129.py  0003_auto_20211119_0141.py  0004_auto_20211119_1259.py  0005_douyinuser_head_url.py
errbot/: config.py
errbot/data/: TextCmds.db.db
fund/: admin.py  fund_celery.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
fund/lawes/: apps.py
fund/migrations/: 0001_initial.py  0002_alter_fund_id.py  0002_auto_20250206_1325.py  0002_fundexpense_headimg.py  0003_fund_is_advance.py  0003_fund_three_yearly_change.py  0003_remove_fundexpense_headimg.py  0004_alter_fund_three_yearly_change.py  0004_fundexpense_need_buy_again.py  0004_remove_fundexpense_is_buy_again.py  0005_fundexpense_annual_interest_rate.py  0005_fundvalue.py  0005_remove_fundexpense_sale_using_date.py  0006_alter_fundexpense_annual_interest_rate.py  0006_alter_fundexpense_need_buy_again.py  0006_alter_fundvalue_deal_at.py  0007_alter_fundexpense_annual_interest_rate.py  0007_auto_20211114_0922.py  0007_fundholdings_hold.py  0008_auto_20211114_0937.py  0008_auto_20250212_1045.py  0008_fund_category.py  0009_auto_20211114_0949.py  0009_auto_20221113_0013.py  0009_auto_20250212_1051.py  0010_fund_space_expense.py  0010_fundexpense_hold_rate_test.py  0010_remove_fund_best_transaction_rule_days.py  0011_alter_fundvalue_rate.py  0011_auto_20211115_0817.py  0011_remove_fundexpense_hold_rate_test.py  0012_auto_20211115_0826.py  0012_auto_20251202_2105.py  0013_auto_20211115_0946.py  0013_fundexpense_gold_gram.py  0014_auto_20211115_0947.py  0014_fundvalue_gold_price.py  0015_remove_fundexpense_fund_value.py  0015_remove_fundexpense_gold_gram.py  0016_auto_20211115_1806.py  (+22 more)
games/: keyboard.py
games/letter_particle/: create_sounds.py  particel.py
games/quick_start/: run.py  run_pic.py  run_score.py  run_v2.py
gomoku/: run.py  test3_3.py  test3_4.py
gpt/: run.py
gpt/texts/: texts.txt
gpt/tokenizer/: special_tokens_map.json  tokenizer_config.json
huixi/: apps.py  models.py
iiilab/: apps.py
iiilab/baike/: login.js  manifest.json
iiilab/login/: bilibili_index.js  iiilab_index.js  login.js  manifest.json
images_in_pdf/: run.py
mv/: models.py  views.py
mv/chrome/: http.js  manifest.json  mv.js
mv/migrations/: 0001_initial.py  0002_auto_20220927_2215.py  0003_mv_name.py
popmart/taobao/: login.js  manifest.json
popmart/tmall/: login.js  manifest.json
puzzle/: run.py
sentry_performance/: apps.py  views.py
timestamp_to_date/: run.py
utools/: apps.py  forward.py  views.py
(+14 files in other folders)
