[project]
name = "fund"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.14"
# uv pip list --outdated: 查看包是否存在更新; uv add Django==6.0;uv sync: 更新依赖
# 根据 pyproject.toml 安装第三方库: uv sync --group linux --python 3.14
dependencies = [
    "rich==14.3.1",
    "django==6.0.1",
    "ipython==9.9.0",
    "djangorestframework==3.16.1",
    "django-cors-headers==4.9.0",
    "django-redis==6.0.0",
    "tabulate==0.9.0",
    "pillow==12.1.0",
    "requests==2.32.5",
]
