[project]
name = "fund"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
# uv pip list --outdated: 查看包是否存在更新; uv add Django==6.0;uv sync: 更新依赖
# 根据 pyproject.toml 安装第三方库: uv sync --group linux --python 3.14
dependencies = [
    "rich==14.3.1",
    "django==6.0.1",
    "ipython==9.9.0",
    "djangorestframework==3.16.1",
    "django-cors-headers==4.9.0",
    "django-redis==6.0.0",
    "tabulate==0.9.0",
    "pillow==12.1.0",
    "requests==2.32.5",
    "langgraph==1.0.7",
    "langchain==1.2.7",
    "langchain-anthropic==1.3.1",
    "langchain_mcp_adapters==0.2.1",
    "langgraph-checkpoint-postgres==3.0.3",
    "langchain-deepseek==1.0.1",
    "tavily-python==0.7.19",
    "langsmith>=0.7.1",
    "openai>=2.18.0",
    "gtts>=2.5.4",
    "pygame==2.6.1",
    "jupyterlab>=4.5.4",  # 启动: jupyter-lab
    "pydantic>=2.12.5",
]
