[project]
name = "agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14.2"
# uv pip list --outdated: 查看包是否存在更新; uv add Django==6.0;uv sync: 更新依赖
# 根据 pyproject.toml 安装第三方库: uv sync --group linux --python 3.14
dependencies = [
    "langgraph==1.0.7",
    "langchain==1.2.7",
    "langchain-anthropic==1.3.1",
    "langchain_mcp_adapters==0.2.1",
    "langgraph-checkpoint-postgres==3.0.3",
    "langchain-deepseek==1.0.1",
]